# tangled-mcp

./: .env.example  .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  justfile  pyproject.toml  server.json
.claude/commands/: release.md
.github/workflows/: publish-mcp.yml
docs/: architecture.md  design-pulls.md  publishing.md
sandbox/: design-pulls.md
src/tangled_mcp/: __init__.py  __main__.py  server.py  settings.py  types.py
src/tangled_mcp/_tangled/: __init__.py  _client.py  _issues.py  _pulls.py
src/tangled_mcp/types/: __init__.py  _branches.py  _common.py  _issues.py  _pulls.py
tests/: __init__.py  test_resolver.py  test_server.py  test_types.py
